--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "java.compile.nullAnalysis.mode": "automatic"
 }
